made reload page after delete deck

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "mobx-state-tree": "^3.14.0",
     "mst-persist": "^0.0.1",
     "next": "^9.0.2",
+    "next-optimized-images": "^2.5.3",
     "next-routes": "^1.4.2",
     "node-fetch": "^2.6.0",
     "nodemailer": "^5.1.1",
@@ -70,6 +71,7 @@
     "react-ace": "^7.0.2",
     "react-apollo": "^2.5.6",
     "react-apollo-hooks": "^0.4.5",
+    "react-autosuggest": "^9.4.3",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.8.6",
     "react-draggable": "^3.3.0",
@@ -78,6 +80,7 @@
     "react-modal": "^3.9.1",
     "react-split-pane": "^0.1.87",
     "react-tabs": "^3.0.0",
+    "react-tagsinput": "^3.19.0",
     "react-toggle": "^4.0.2",
     "rebass": "^3.1.1",
     "reflect-metadata": "^0.1.13",
