--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,41 +1,21 @@
 {
-  "compileOnSave": false,
   "compilerOptions": {
+    "target": "es5",
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
-    "baseUrl": ".",
-    "rootDir": ".",
+    "skipLibCheck": true,
     "strict": false,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
+    "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "node",
+    "resolveJsonModule": true,
     "isolatedModules": true,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
     "allowSyntheticDefaultImports": true,
-    "lib": [
-      "dom",
-      "es2015",
-      "es2016",
-      "esnext.asynciterable"
-    ],
-    "target": "es5",
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
     "jsx": "preserve"
   },
-  "exclude": [
-    "node_modules",
-    "next.config.js",
-    "",
-    "be",
-    "/Users/leo/projects/memcode/components/shared/Editor.js",
-    "/Users/leo/projects/memcode/components/js/Editor.js"
-  ],
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx"
-  ]
+  "exclude": ["node_modules", "server", "be", "python"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
 }
