--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "be": "concurrently \"yarn buildServer\" \"yarn start:be\" ",
     "start:be": "dotenv -e ./.env nodemon --watch server --exec node be/index.js",
     "start:python": "dotenv -e ./.env nodemon --watch server --exec node python/index.js",
-    "start": "concurrently \"yarn dev\" \"yarn be\" \"yarn start:python\" ",
+    "start:reason": "dotenv -e ./.env nodemon --watch server --exec node reason/index.js",
+    "start": "concurrently \"yarn dev\" \"yarn be\" \"yarn start:python\" \"yarn start:reason\"  ",
     "buildServer": "tsc -p server -w",
     "build": "next build",
     "generate": "graphql-codegen --config codegen.yml",
