--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
     "dev": "dotenv -e ./.env next dev",
     "be": "concurrently \"yarn buildServer\" \"yarn start:be\" ",
     "start:be": "dotenv -e ./.env nodemon --watch server --exec node be/index.js",
-    "start:python": "dotenv -e ./.env nodemon --watch server --exec node python/index.js",
-    "start:reason": "dotenv -e ./.env nodemon --watch server --exec node reason/index.js",
-    "start": "concurrently \"yarn dev\" \"yarn be\" \"yarn start:python\" \"yarn start:reason\"  ",
+    "start": "concurrently \"yarn dev\" \"yarn be\"   ",
     "buildServer": "tsc -p server -w",
     "build": "next build",
     "generate": "graphql-codegen --config codegen.yml",
