--- a/package.json
+++ b/package.json
@@ -71,10 +71,12 @@
     "react-apollo": "^2.5.6",
     "react-apollo-hooks": "^0.4.5",
     "react-autosuggest": "^9.4.3",
+    "react-codemirror2": "^6.0.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.8.6",
     "react-draggable": "^3.3.0",
     "react-final-form-hooks": "^2.0.0",
+    "react-hot-keys": "^2.1.0",
     "react-hotkeys": "^2.0.0",
     "react-modal": "^3.9.1",
     "react-split-pane": "^0.1.87",
