--- a/package.json
+++ b/package.json
@@ -5,42 +5,30 @@
     "start": "next start"
   },
   "dependencies": {
+    "@codemirror/lang-javascript": "0.19.7",
+    "@codemirror/lang-rust": "0.19.1",
+    "@codemirror/stream-parser": "0.19.3",
+    "@mantine/core": "3.6.7",
+    "@mantine/hooks": "3.6.7",
+    "@mantine/next": "3.6.7",
     "@next-auth/prisma-adapter": "1.0.1",
     "@prisma/client": "3.9.1",
-    "@styled-icons/feather": "10.34.0",
-    "@types/styled-components": "5.1.22",
-    "add": "2.0.6",
-    "brace": "0.11.1",
-    "final-form": "4.16.1",
+    "@radix-ui/react-icons": "1.0.3",
+    "@replit/codemirror-vim": "0.19.0",
+    "@uiw/react-codemirror": "4.3.3",
     "next": "12.0.10",
     "next-auth": "4.2.1",
     "next-routes": "1.4.2",
-    "node-fetch": "2.6.0",
     "prettier": "1.18.2",
     "prisma": "3.9.1",
-    "ramda": "0.26.1",
-    "react": "17.0.2",
-    "react-ace": "7.0.2",
-    "react-autosuggest": "9.4.3",
-    "react-custom-scrollbars": "4.2.1",
-    "react-dom": "17.0.2",
-    "react-draggable": "3.3.0",
-    "react-final-form-hooks": "2.0.0",
-    "react-hotkeys": "2.0.0",
-    "react-modal": "3.9.1",
-    "react-split-pane": "0.1.87",
-    "react-tabs": "3.0.0",
-    "react-tagsinput": "3.19.0",
-    "rebass": "3.1.1",
-    "styled-components": "4.3.2",
+    "react": "18.0.0-rc.0",
+    "react-dom": "18.0.0-rc.0",
     "typegraphql-prisma": "0.18.3",
-    "typescript": "4.5.5",
-    "yarn": "1.22.17"
+    "typescript": "4.5.5"
   },
   "devDependencies": {
     "@babel/core": "7.4.5",
-    "@types/react": "16.8.19",
-    "@types/react-dom": "16.8.4",
-    "babel-plugin-styled-components": "1.12.0"
+    "@types/react": "17.0.11",
+    "@types/react-dom": "17.0.11"
   }
 }
