--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@mantine/core": "3.6.7",
+    "@mantine/hooks": "3.6.7",
+    "@mantine/next": "3.6.7",
     "@next-auth/prisma-adapter": "1.0.1",
     "@prisma/client": "3.9.1",
+    "@stitches/react": "^1.2.6",
     "@styled-icons/feather": "10.34.0",
     "@types/styled-components": "5.1.22",
-    "add": "2.0.6",
     "brace": "0.11.1",
     "final-form": "4.16.1",
     "next": "12.0.10",
@@ -19,11 +22,11 @@
     "prettier": "1.18.2",
     "prisma": "3.9.1",
     "ramda": "0.26.1",
-    "react": "17.0.2",
+    "react": "18.0.0-rc.0",
     "react-ace": "7.0.2",
     "react-autosuggest": "9.4.3",
     "react-custom-scrollbars": "4.2.1",
-    "react-dom": "17.0.2",
+    "react-dom": "18.0.0-rc.0",
     "react-draggable": "3.3.0",
     "react-final-form-hooks": "2.0.0",
     "react-hotkeys": "2.0.0",
@@ -39,8 +42,8 @@
   },
   "devDependencies": {
     "@babel/core": "7.4.5",
-    "@types/react": "16.8.19",
-    "@types/react-dom": "16.8.4",
+    "@types/react": "17.0.11",
+    "@types/react-dom": "17.0.11",
     "babel-plugin-styled-components": "1.12.0"
   }
 }
