--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "next": "12.0.10",
     "next-auth": "4.2.1",
     "next-routes": "1.4.2",
-    "prettier": "1.18.2",
+    "prettier": "2.5.1",
     "prisma": "3.9.1",
     "react": "18.0.0-rc.0",
     "react-dom": "18.0.0-rc.0",
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@babel/core": "7.4.5",
+    "@types/prettier": "2.4.4",
     "@types/react": "17.0.11",
     "@types/react-dom": "17.0.11"
   }
