--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@mantine/core": "3.6.7",
     "@mantine/hooks": "3.6.7",
     "@mantine/next": "3.6.7",
+    "@mantine/rte": "3.6.7",
     "@next-auth/prisma-adapter": "1.0.1",
     "@prisma/client": "3.9.1",
     "@radix-ui/react-icons": "1.0.3",
     "@replit/codemirror-vim": "0.19.0",
     "@uiw/react-codemirror": "4.3.3",
+    "axios": "0.26.0",
     "next": "12.0.10",
     "next-auth": "4.2.1",
     "next-routes": "1.4.2",
@@ -23,6 +25,7 @@
     "prisma": "3.9.1",
     "react": "18.0.0-rc.0",
     "react-dom": "18.0.0-rc.0",
+    "swr": "1.2.1",
     "typegraphql-prisma": "0.18.3",
     "typescript": "4.5.5"
   },
